--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,21 +5,28 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.20.2"
+    "react-hook-form": "^7.20.2",
+    "ts-jest": "^27.0.7"
   },
   "devDependencies": {
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/react-hooks": "^7.0.1",
     "@types/node": "16.11.9",
     "@types/react": "17.0.36",
     "autoprefixer": "^10.4.0",
+    "babel-jest": "^27.4.2",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
+    "jest": "^27.4.2",
     "postcss": "^8.3.11",
+    "react-test-renderer": "^17.0.2",
     "tailwindcss": "^2.2.19",
     "typescript": "4.5.2"
   }
