--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 .idea/
+/backend/src/main/resources/templates/register_succes.html
+/backend/src/main/resources/templates/index.html
+/backend/src/main/resources/templates/signup_form.html
