--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /backend/src/main/resources/templates/register_succes.html
 /backend/src/main/resources/templates/index.html
 /backend/src/main/resources/templates/signup_form.html
+
+.vscode
