java works out of docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,18 @@
 version: "3.7"
 
 services:
-  backend:
-    build: ./backend
-    command: mvn spring-boot:run
-    networks:
-      - backend-db
-    ports:
-      - "8080:8080"
   frontend:
     build: ./frontend
     command: npm run dev 
     ports:
       - "3000:3000"
+  #backend:
+  #  build: ./backend
+  #  command: mvn spring-boot:run
+  #  networks:
+  #    - backend-db
+  #  ports:
+  #    - "8080:8080"
   db:
     image: mysql:8.0
     networks:
@@ -21,6 +21,8 @@ services:
     environment:
       - MYSQL_ROOT_PASSWORD=pelikan
       - MYSQL_DATABASE=pelikan
+    cap_add:
+      - SYS_NICE  # CAP_SYS_NICE
 networks:
   backend-db:
     driver: bridge
