--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,7 @@
 FROM adoptopenjdk/openjdk11:alpine-jre
-ARG JAR_FILE=target/backend-0.0.1-SNAPSHOT.jar
+#ARG JAR_FILE=target/backend-0.0.1-SNAPSHOT.jar
+COPY ./target/backend-0.0.1-SNAPSHOT.jar /app
 WORKDIR /app
-COPY ${JAR_FILE} app.jar
-ENTRYPOINT ["java","-jar","app.jar"]
+EXPOSE 8080
+ENTRYPOINT ["java","-jar","backend-0.0.1-SNAPSHOT.jar"]
 
