--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -57,14 +57,6 @@
 
 		<dependency>
 			<groupId>org.webjars</groupId>
-			<artifactId>jquery</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.webjars</groupId>
-			<artifactId>bootstrap</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.webjars</groupId>
 			<artifactId>webjars-locator-core</artifactId>
 		</dependency>
 
@@ -86,6 +78,11 @@
                 </configuration>
 			</plugin>
 		</plugins>
+		<testResources>
+                <testResource>
+                    <directory>src/main/java/pl/pjatk/backend</directory>
+                </testResource>
+    	</testResources>
 	</build>
 
 </project>
