--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,13 @@
+# Maven
+FROM maven:3.6.0-jdk-11-slim AS build
+COPY src /app/src
+COPY pom.xml /app
+RUN mvn -f /app/pom.xml clean package
+
+# Java
 FROM adoptopenjdk/openjdk11:alpine-jre
-#ARG JAR_FILE=target/backend-0.0.1-SNAPSHOT.jar
-COPY ./target/backend-0.0.1-SNAPSHOT.jar /app
+COPY --from=build /app/target/backend-0.0.1-SNAPSHOT.jar /app/app.jar
 WORKDIR /app
 EXPOSE 8080
-ENTRYPOINT ["java","-jar","backend-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java","-jar","/app/app.jar"]
 
