--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://172.19.0.2:3306/pelikan
+spring.datasource.url=jdbc:mysql://db:3306/pelikan
 spring.datasource.username=root
 spring.datasource.password=pelikan
 spring.jpa.properties.hibernate.format_sql=true
