--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,15 @@ services:
     command: npm run dev 
     ports:
       - "3000:3000"
-  #backend:
-  #  build: ./backend
-  #  command: mvn spring-boot:run
-  #  networks:
-  #    - backend-db
-  #  ports:
-  #    - "8080:8080"
+  backend:
+    build: ./backend
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/pelikan
+    command: mvn spring-boot:run
+    networks:
+      - backend-db
+    ports:
+      - "8080:8080"
   db:
     image: mysql:8.0
     networks:
