--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -21,6 +21,7 @@
       "@molecules/*": ["src/components/molecules/*"],
       "@layouts/*": ["src/layouts/*"],
       "@hooks/*": ["src/hooks/*"],
+      "@contexts/*": ["src/contexts/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "jest.config.js"],
