--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/pelikan_holidays
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://db:3306/pelikan
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=pelikan
 spring.jpa.properties.hibernate.format_sql=true
