--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "jest": "^27.4.2",
     "postcss": "^8.3.11",
     "react-test-renderer": "^17.0.2",
+    "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^2.2.19",
     "typescript": "4.5.2"
   }
